# macos-laguna-s2.1

./: .gitignore  BENCHMARK_RESULTS.md  LICENSE  README.md  pyproject.toml
.codebase-memory/: artifact.json  graph.db.zst
charts/: poolside_terminal_bench_2_1.csv
results/: comparison.md  laguna_s21_full_results.csv
scripts/: laguna.sh
src/laguna_bench/: __init__.py  agent.py  backend.py  catalog.py  chart.py  cli.py  csv_export.py  failures.py  grading.py  llama_profile.py  model_files.py  reporting.py  runner.py  sweep.py  tasks.py
tests/: test_agent.py  test_backend.py  test_chart.py  test_grading.py  test_llama_profile.py  test_model_files.py  test_reporting.py  test_sweep.py
