[project]
name = "laguna-bench"
version = "0.1.0"
description = "Reproducible Apple Silicon benchmark harness for Laguna S 2.1 MLX quants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "huggingface-hub>=1.0",
  "jang[mlx]>=2.5.31",
  "mlx-lm>=0.31.3",
  "mlx-vlm>=0.6.3",
  "psutil>=7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
laguna-bench = "laguna_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/laguna_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true

[tool.uv.sources]
jang = { git = "https://github.com/jjang-ai/jangq", rev = "801209c13c189ebb8fb4d1596748a336f568da38", subdirectory = "jang-tools" }
